crates/test-files/fixtures/compile_errors/init_call_on_external_contract.fe
use std::context::Context

contract Foo {
    pub fn __init__() {}

    pub fn f() {}
}

contract Bar {
    fn b(ctx: Context) {
        let foo: Foo = Foo(address(0))
        foo.f()
        foo.__init__()
    }
}
